vault/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-http
  namespace: vault-system
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - vault-dashboard.pfs.pack
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-https-redirect
  namespace: vault-system
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - vault-dashboard.pfs.pack
  rules:
  - backendRefs:
    - name: vault-ui
      port: 8200
    # matches:
    # - path:
    #     type: PathPrefix
    #     value: "/ui/"
